# prion-burden

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
notebooks/: 00_calibrate_scalebars.ipynb  01_phase1_burden_morphometry.ipynb  animal_key.csv
src/prion_burden/: __init__.py  analysis.py  calibrate.py  cli.py  plots.py
src/prion_pipeline/: __init__.py  analysis.py  calibrate.py  cli.py  config.py  demo.py  discovery.py  pipeline.py  plots.py  segment.py
tests/: conftest.py  test_calibrate.py  test_cli.py  test_config.py  test_demo_run.py  test_discovery.py  test_pipeline.py  test_segment.py
