[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prion-ml-pipeline"
version = "0.1.0"
description = "CWD/prion PrP-burden quantification from IHC photomicrographs (Phase 0 calibrate + Phase 1 classical)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ryan Eastman", email = "ryan.eastman@colostate.edu" }]
keywords = ["bioimage-analysis", "prion", "CWD", "histopathology", "IHC", "DAB", "morphometry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]

# Lower bounds for flexibility; requirements.txt pins the exact tested versions.
# scikit-image >= 0.20 is supported via a runtime shim for the renamed
# remove_small_objects/remove_small_holes size argument.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "scikit-learn>=1.3",
    "tifffile>=2023.7.10",
    "matplotlib>=3.7",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
notebooks = ["jupytext>=1.16", "jupyterlab>=4"]

[project.scripts]
prion = "prion_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/ryan-eastman/prion_ml_pipeline"
Issues = "https://github.com/ryan-eastman/prion_ml_pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
